gen3/hatchery-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hatchery-ambassador-handoff
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/lw-workspace/`)
      kind: Rule
      services:
        - name: ambassador
          port: 8080
  tls:
    secretName: wits-tls-secret
