gen3/main-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gen3-main-route
  namespace: default 
spec:
  entryPoints:
   - websecure
  routes:
   - match: Host(`gen3-dev.core.wits.ac.za`) && PathPrefix(`/`)
     kind: Rule
     services:
       - name: revproxy-service 
         port: 80
  tls:
     secretName: wits-tls-secret
